# cis188-final

./: .dockerignore  .gitignore  README.md  docker-compose.yml
.github/workflows/: build-and-deploy.yml
k8s/: ingress.yaml  mongo-pv.yaml  mongo-pvc.yaml  mongo-sc.yaml  mongo.yaml  web.yaml
web/: Dockerfile  main.py  pyproject.toml
