[tool.poetry]
name = "web"
version = "0.1.0"
description = ""
authors = ["Jason Tran <jasontran2022@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.61.1"
uvicorn = "^0.11.8"
redis = "^3.5.3"
jinja2 = "^2.11.2"
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
isort = "^5.9.3"
black = "^21.8b0"
flake8-isort = "^4.0.0"
pytest = "^6.2.2"
requests = "^2.26.0"
pytest-mock = "^3.5.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.isort]
profile = "black"
multi_line_output = 3